# gmock-sample

./: .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md
include/auto-pointer/: auto_pointer.hpp
include/gmock-sample/: auto_pointer.hpp
src/: auto_pointer.cpp
test/: CMakeLists.txt
